Revert "evalfront fini pour pc"
This reverts commit f4464e45bd469df16c7b2092024fc30b647180fa.

--- a/index.html
+++ b/index.html
@@ -9,64 +9,18 @@
 </head>
 <body>
 
-<div class="loader">
-</div>
+<div id="ensemble_bouton">
 
-<div id="main">
-    <div class="ensemble_bouton">
-        <div class="bouton_description">
-            <h2>BRADLEY COOPER</h2>
-            <p id="description">I'm a Graphic Designer, Coder & Entrepreneur.<br>
-            Take a look at my portfolio to see what I cas working.</p>
-            <a id="resume" href="#"><i class="fas fa-download"></i> RESUME</a><a id="contact" href="#"><i class="fas fa-info"></i> CONTACT</a>
-        </div>
-        <a href="#">
-            <div class="bouton_profile">
-                <i class="far fa-address-card"></i><p>PROFILE</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bouton_experience">
-                <i class="fas fa-suitcase"></i><p id="ex">EXPERIENCE</p>
-            </div>
-        </a>
-            <a href="#">
-                <div class="bouton_education">
-                    <i class="fas fa-graduation-cap"></i><p>EDUCATION</p>
-                </div>
-            </a>
-        <a href="#">
-            <div class="bouton_blog">
-                <i class="fas fa-blog"></i><p>BLOG</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bouton_social">
-                <i class="fas fa-plus"></i><p>SOCIAL MENU</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bouton_contact">
-                <a href="#"><i class="fas fa-paper-plane"></i><p>CONTACT</p></a>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bouton_portfolio">
-                <i class="fas fa-desktop"></i><p>PORTFOLIO</p>
-            </div>
-        </a>
+    <div class="bouton_description">
+        <h2>BRADLEY COOPER</h2>
+        <p id="description">I'm a Graphic Designer, Coder & Entrepreneur.<br>
+        Take a look at my portfolio to see what I cas working.</p>
+        <a href="#"><i class="fas fa-download"></i> RESUME</a><a href="#"><i class="fas fa-info"></i> CONTACT</a>
     </div>
-
-    <div class="photo">
-        <img id="photo_1" src="john_doe.jpg" alt="john does"/>
+    <div class="bouton_profile">
+        <a href="#"><i class="far fa-address-card"></i><p>PROFILE</p></a>
     </div>
 </div>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-<script type="text/javascript">
-    $(window).load(function() {
-        $(".loader").fadeOut("1000");
-    })
-</script>
 </body>
 </html>
