--- a/index.html
+++ b/index.html
@@ -9,18 +9,65 @@
 </head>
 <body>
 
-<div id="ensemble_bouton">
-
-    <div class="bouton_description">
-        <h2>BRADLEY COOPER</h2>
-        <p id="description">I'm a Graphic Designer, Coder & Entrepreneur.<br>
-        Take a look at my portfolio to see what I cas working.</p>
-        <a href="#"><i class="fas fa-download"></i> RESUME</a><a href="#"><i class="fas fa-info"></i> CONTACT</a>
-    </div>
-    <div class="bouton_profile">
-        <a href="#"><i class="far fa-address-card"></i><p>PROFILE</p></a>
-    </div>
+<div class="loader">
 </div>
 
+<div id="main">
+    <div class="ensemble_bouton">
+        <div class="bouton_description">
+            <h2>BRADLEY COOPER</h2>
+            <p id="description">I'm a Graphic Designer, Coder & Entrepreneur.<br>
+                Take a look at my portfolio to see what I cas working.</p>
+            <a href="#" id="resume"><i class="fas fa-download"></i> RESUME</a><a href="#" id="contact"><i
+                class="fas fa-info"></i> CONTACT</a>
+        </div>
+        <a href="#">
+            <div class="bouton_profile">
+                <i class="far fa-address-card"></i>
+                <p>PROFILE</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bouton_experience">
+                <i class="fas fa-suitcase"></i>
+                <p id="ex">EXPERIENCE</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bouton_education">
+                <i class="fas fa-graduation-cap"></i>
+                <p>EDUCATION</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bouton_blog">
+                <i class="fas fa-blog"></i>
+                <p>BLOG</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bouton_social">
+                <i class="fas fa-plus"></i>
+                <p>SOCIAL MENU</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bouton_contact">
+                <a href="#"><i class="fas fa-paper-plane"></i>
+                    <p>CONTACT</p></a>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bouton_portfolio">
+                <i class="fas fa-desktop"></i>
+                <p>PORTFOLIO</p>
+            </div>
+        </a>
+    </div>
+
+    <div class="photo">
+        <img alt="john does" id="photo_1" src="john_doe.jpg"/>
+    </div>
+</div>
 </body>
 </html>
