--- a/index.html
+++ b/index.html
@@ -18,48 +18,48 @@
             <h2>BRADLEY COOPER</h2>
             <p id="description">I'm a Graphic Designer, Coder & Entrepreneur.<br>
                 Take a look at my portfolio to see what I cas working.</p>
-            <a href="#" id="resume"><i class="fas fa-download"></i> RESUME</a><a href="#" id="contact"><i
-                class="fas fa-info"></i> CONTACT</a>
+            <a href="#" id="resume"><i class="fas fa-download"> </i> RESUME</a>
+            <a href="#" id="contact"><i class="fas fa-info"> </i> CONTACT</a>
         </div>
         <a href="#">
             <div class="bouton_profile">
-                <i class="far fa-address-card"></i>
+                <i class="far fa-address-card"> </i>
                 <p>PROFILE</p>
             </div>
         </a>
         <a href="#">
             <div class="bouton_experience">
-                <i class="fas fa-suitcase"></i>
+                <i class="fas fa-suitcase"> </i>
                 <p id="ex">EXPERIENCE</p>
             </div>
         </a>
         <a href="#">
             <div class="bouton_education">
-                <i class="fas fa-graduation-cap"></i>
+                <i class="fas fa-graduation-cap"> </i>
                 <p>EDUCATION</p>
             </div>
         </a>
         <a href="#">
             <div class="bouton_blog">
-                <i class="fas fa-blog"></i>
+                <i class="fas fa-blog"> </i>
                 <p>BLOG</p>
             </div>
         </a>
         <a href="#">
             <div class="bouton_social">
-                <i class="fas fa-plus"></i>
+                <i class="fas fa-plus"> </i>
                 <p>SOCIAL MENU</p>
             </div>
         </a>
         <a href="#">
             <div class="bouton_contact">
-                <a href="#"><i class="fas fa-paper-plane"></i>
+                <a href="#"><i class="fas fa-paper-plane"> </i>
                     <p>CONTACT</p></a>
             </div>
         </a>
         <a href="#">
             <div class="bouton_portfolio">
-                <i class="fas fa-desktop"></i>
+                <i class="fas fa-desktop"> </i>
                 <p>PORTFOLIO</p>
             </div>
         </a>
